@@ -1,5 +1,8 @@
 #include "gblender.h"
 #include <stdlib.h>
+
+#if 0  /* using slow power functions */
+
 #include <math.h>
 
 static void
@@ -54,6 +57,63 @@ gblender_set_gamma_table( double           gamma_value,
   }
 }
 
+#else  /* using fast finite differences */
+
+static void
+gblender_set_gamma_table( double           gamma_value,
+                          unsigned short*  gamma_ramp,
+                          unsigned char*   gamma_ramp_inv )
+{
+  const int  gmax = (256 << GBLENDER_GAMMA_SHIFT)-1;
+  double     p;
+
+  if ( gamma_value <= 0 )  /* special case for sRGB */
+  {
+    int     ii;
+
+    /* voltage to linear; power function using finite differences */
+    for ( p = 1.0, ii = 255; ii > (int)(255.*0.039285714); ii-- )
+    {
+      gamma_ramp[ii] = (unsigned short)( gmax*p + 0.5 );
+      p -= 2.4 * p / ( ii + 255. * 0.055 );
+    }
+    for ( ; ii >= 0; ii-- )
+      gamma_ramp[ii] = (unsigned short)( gmax*ii/(255.*12.92321) + 0.5 );
+
+
+    /* linear to voltage; power function using finite differences */
+    for ( p = 1.0, ii = gmax; ii > (int)(gmax*0.0030399346); ii-- )
+    {
+      gamma_ramp_inv[ii] = (unsigned char)( 255.*p + 0.5 );
+      p -= ( p + 0.055 ) / ( 2.4 * ii );
+    }
+    for ( ; ii >= 0; ii-- )
+      gamma_ramp_inv[ii] = (unsigned char)( 255.*12.92321*ii/gmax + 0.5 );
+  }
+  else
+  {
+    int     ii;
+    double  gamma_inv = 1. / gamma_value;
+
+    /* voltage to linear; power function using finite differences */
+    for ( p = 1.0, ii = 255; ii > 0; ii-- )
+    {
+      gamma_ramp[ii] = (unsigned short)( gmax*p + 0.5 );
+      p -= gamma_value * p / ii;
+    }
+    gamma_ramp[ii] = 0;
+
+    /* linear to voltage; power function using finite differences */
+    for ( p = 1.0, ii = gmax; ii > 0; ii-- )
+    {
+      gamma_ramp_inv[ii] = (unsigned char)( 255.*p + 0.5 );
+      p -= gamma_inv * p / ii;
+    }
+    gamma_ramp[ii] = 0;
+  }
+}
+
+#endif
 
 /* clear the cache
  */
